package com.revature.p1.banking.Service;

import org.springframework.stereotype.Service;

@Service
public class RoleService {
}
